Fixing doc template and added test

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/dhcp-servers.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/dhcp-servers.j2
@@ -80,7 +80,7 @@
 {%                     for subnet in dhcp_server.subnets | arista.avd.natural_sort %}
 {%                         if subnet.reservations is arista.avd.defined %}
 
-###### DHCP Reservations in {{ subnet.subnet }}
+###### DHCP Reservations in subnet {{ subnet.subnet }}
 
 | Mac Address | IPv4 Address | IPv6 Address | Hostname |
 | ----------- | ------------ | ------------ | -------- |
