--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/dhcp-servers.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/dhcp-servers.j2
@@ -17,24 +17,36 @@
 
 ### DHCP Servers Summary
 
-| DHCP Server Enabled | VRF | IPv4 DNS Domain | IPv4 DNS Servers | IPv4 Bootfile | IPv6 DNS Domain | IPv6 DNS Servers | IPv6 Bootfile |
-| ------------------- | --- | --------------- | ---------------- | ------------- | --------------- | ---------------- | ------------- |
+| DHCP Server Enabled | VRF | IPv4 DNS Domain | IPv4 DNS Servers | IPv4 Bootfile | IPv4 Lease Time | IPv6 DNS Domain | IPv6 DNS Servers | IPv6 Bootfile | IPv6 Lease Time |
+| ------------------- | --- | --------------- | ---------------- | ------------- | --------------- | --------------- | ---------------- | ------------- | --------------- |
 {%         for dhcp_server in dhcp_servers | arista.avd.natural_sort("vrf") %}
 {%             set enabled = not dhcp_server.disabled | arista.avd.default(false) %}
 {%             set dns_domain_ipv4 = dhcp_server.dns_domain_name_ipv4 | arista.avd.default("-") %}
 {%             set dns_servers_ipv4 = dhcp_server.dns_servers_ipv4 | arista.avd.default(["-"]) | join(", ") %}
 {%             set tftp_server_file_ipv4 = dhcp_server.tftp_server.file_ipv4 | arista.avd.default("-") %}
+{%             if dhcp_server.lease_time_ipv4.days is arista.avd.defined
+                and dhcp_server.lease_time_ipv4.hours is arista.avd.defined
+                and dhcp_server.lease_time_ipv4.minutes is arista.avd.defined %}
+{%                 set lease_time_ipv4 = dhcp_server.lease_time_ipv4.days ~ " days " ~ dhcp_server.lease_time_ipv4.hours ~ " hours " ~ dhcp_server.lease_time_ipv4.minutes ~ " minutes" %}
+{%             endif %}
 {%             set dns_domain_ipv6 = dhcp_server.dns_domain_name_ipv6 | arista.avd.default("-") %}
 {%             set dns_servers_ipv6 = dhcp_server.dns_servers_ipv6 | arista.avd.default(["-"]) | join(", ") %}
 {%             set tftp_server_file_ipv6 = dhcp_server.tftp_server.file_ipv6 | arista.avd.default("-") %}
-| {{ enabled }} | {{ dhcp_server.vrf }} | {{ dns_domain_ipv4 }} | {{ dns_servers_ipv4 }} | {{ tftp_server_file_ipv4 }} | {{ dns_domain_ipv6 }} | {{ dns_servers_ipv6 }} | {{ tftp_server_file_ipv6 }} |
+{%             if dhcp_server.lease_time_ipv6.days is arista.avd.defined
+                and dhcp_server.lease_time_ipv6.hours is arista.avd.defined
+                and dhcp_server.lease_time_ipv6.minutes is arista.avd.defined %}
+{%                 set lease_time_ipv6 = dhcp_server.lease_time_ipv6.days ~ " days " ~ dhcp_server.lease_time_ipv6.hours ~ " hours " ~ dhcp_server.lease_time_ipv6.minutes ~ " minutes" %}
+{%             endif %}
+| {{ enabled }} | {{ dhcp_server.vrf }} | {{ dns_domain_ipv4 }} | {{ dns_servers_ipv4 }} | {{ tftp_server_file_ipv4 }} | {{ lease_time_ipv4 | arista.avd.default("-") }} | {{ dns_domain_ipv6 }} | {{ dns_servers_ipv6 }} | {{ tftp_server_file_ipv6 }} | {{ lease_time_ipv6 | arista.avd.default("-") }} |
 {%         endfor %}
 {%         for dhcp_server in dhcp_servers | arista.avd.natural_sort("vrf") %}
 {%             set dhcp_server_subnets = [] %}
 {%             set dhcp_vendor_options = [] %}
 {%             for subnet in dhcp_server.subnets | arista.avd.natural_sort %}
 {%                 set subnet_dns_servers = subnet.dns_servers | arista.avd.default(["-"]) | join(", ") %}
-{%                 if subnet.lease_time is arista.avd.defined %}
+{%                 if subnet.lease_time.days is arista.avd.defined
+                    and subnet.lease_time.hours is arista.avd.defined
+                    and subnet.lease_time.minutes is arista.avd.defined %}
 {%                     set subnet_lease_time = subnet.lease_time.days ~ " days, " ~ subnet.lease_time.hours ~ " hours, " ~ subnet.lease_time.minutes ~ " minutes" %}
 {%                 else %}
 {%                     set subnet_lease_time = "-" %}
@@ -64,6 +76,18 @@
 | ------ | ---- | ----------- | --------------- | ---------- | ------ |
 {%                     for subnet in dhcp_server_subnets %}
 | {{ subnet.subnet }} | {{ subnet.name | arista.avd.default("-") }} | {{ subnet.dns_servers }} | {{ subnet.default_gateway }} | {{ subnet.lease_time }} | {{ subnet.ranges }} |
+{%                     endfor %}
+{%                     for subnet in dhcp_server.subnets | arista.avd.natural_sort %}
+{%                         if subnet.reservations is arista.avd.defined %}
+
+###### DHCP Reservations in subnet {{ subnet.subnet }}
+
+| Mac Address | IPv4 Address | IPv6 Address | Hostname |
+| ----------- | ------------ | ------------ | -------- |
+{%                             for reservation in subnet.reservations | arista.avd.natural_sort("mac_address") %}
+| {{ reservation.mac_address }} | {{ reservation.ipv4_address | arista.avd.default("-") }} | {{ reservation.ipv6_address | arista.avd.default("-") }} |  {{ reservation.hostname | arista.avd.default("-") }} |
+{%                             endfor %}
+{%                         endif %}
 {%                     endfor %}
 {%                 endif %}
 {%                 if dhcp_vendor_options | length > 0 %}
