Refactor(eos_cli_config_gen): Mark deprecated key MIB_family_name as removed in snmp_server data model

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/snmp-server.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/snmp-server.j2
@@ -60,8 +60,8 @@ snmp-server location {{ snmp_server.location }}
 {%             if view.name is arista.avd.defined %}
 {%                 set view_cli = "snmp-server view " ~ view.name %}
 {%             endif %}
-{%             if view.mib_family_name | arista.avd.default(view.MIB_family_name) is arista.avd.defined %}
-{%                 set view_cli = view_cli ~ " " ~ view.mib_family_name | arista.avd.default(view.MIB_family_name) %}
+{%             if view.mib_family_name is arista.avd.defined %}
+{%                 set view_cli = view_cli ~ " " ~ view.mib_family_name %}
 {%             endif %}
 {%             if view.included is arista.avd.defined(true) %}
 {%                 set view_cli = view_cli ~ " included" %}
