--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/snmp-server.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/snmp-server.j2
@@ -119,7 +119,7 @@
 | ---- | --------------- | ------ |
 {%         for view in snmp_server.views %}
 {%             set row_view = view.name | arista.avd.default('default') %}
-{%             set row_mib_family_name = view.mib_family_name | arista.avd.default(view.MIB_family_name, '-') %}
+{%             set row_mib_family_name = view.mib_family_name | arista.avd.default('-') %}
 {%             if view.included | arista.avd.default(false) %}
 {%                 set row_status = 'Included' %}
 {%             else %}
