removed name_server key

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ip-name-servers.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ip-name-servers.j2
@@ -4,7 +4,7 @@
  that can be found in the LICENSE file.
 #}
 {# doc - ip name servers #}
-{% if ip_name_servers is arista.avd.defined or name_server is arista.avd.defined %}
+{% if ip_name_servers is arista.avd.defined %}
 
 ### IP Name Servers
 
@@ -14,10 +14,6 @@
 | ----------- | --- | -------- |
 {%     for name_server in ip_name_servers | arista.avd.default([]) %}
 | {{ name_server.ip_address }} | {{ name_server.vrf | arista.avd.default('-') }} | {{ name_server.priority | arista.avd.default('-') }} |
-{%     endfor %}
-{# legacy data model to be removed in AVD 5.0.0 #}
-{%     for node in name_server.nodes | arista.avd.default([]) %}
-| {{ node }} | {{ name_server.source.vrf | arista.avd.default('-') }} | - |
 {%     endfor %}
 
 #### IP Name Servers Device Configuration
