--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/radius-server.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/radius-server.j2
@@ -4,7 +4,7 @@
  that can be found in the LICENSE file.
 #}
 {# doc - radius servers #}
-{% if radius_servers is arista.avd.defined or radius_server is arista.avd.defined %}
+{% if radius_server is arista.avd.defined %}
 
 ### RADIUS Server
 {%     if radius_server.attribute_32_include_in_access_req is arista.avd.defined %}
@@ -29,32 +29,25 @@
 
 - Dynamic Authorization for TLS connections uses SSL profile {{ radius_server.dynamic_authorization.tls_ssl_profile }}
 {%     endif %}
+{%     if radius_server.hosts is arista.avd.defined %}
 
 #### RADIUS Server Hosts
 
 | VRF | RADIUS Servers | TLS | SSL Profile | Timeout | Retransmit |
 | --- | -------------- | --- | ----------- | ------- | ---------- |
-{#     Old data model #}
-{%     for radius_server in radius_servers | arista.avd.default([]) %}
-{%         set vrf = radius_server.vrf | arista.avd.default('default') %}
-{%         set timeout = radius_server.timeout | arista.avd.default('-') %}
-{%         set retransmit = radius_server.retransmit | arista.avd.default('-') %}
-| {{ vrf }} | {{ radius_server.host }} | - | - | {{ timeout }} | {{ retransmit }} |
-{%     endfor %}
-{#     New data model #}
-{%     for host in radius_server.hosts | arista.avd.default([]) %}
-{%         set vrf = host.vrf | arista.avd.default('default') %}
-{%         set tls = host.tls.enabled | arista.avd.default('-') %}
-{%         set ssl_profile = host.tls.ssl_profile | arista.avd.default('-') %}
-{%         set timeout = host.timeout | arista.avd.default('-') %}
-{%         set retransmit = host.retransmit | arista.avd.default('-') %}
+{%         for host in radius_server.hosts | arista.avd.default([]) %}
+{%             set vrf = host.vrf | arista.avd.default('default') %}
+{%             set tls = host.tls.enabled | arista.avd.default('-') %}
+{%             set ssl_profile = host.tls.ssl_profile | arista.avd.default('-') %}
+{%             set timeout = host.timeout | arista.avd.default('-') %}
+{%             set retransmit = host.retransmit | arista.avd.default('-') %}
 | {{ vrf }} | {{ host.host }} | {{ tls }} | {{ ssl_profile }} | {{ timeout }} | {{ retransmit }} |
-{%     endfor %}
+{%         endfor %}
+{%     endif %}
 
 #### RADIUS Server Device Configuration
 
 ```eos
-{%     include 'eos/radius-servers.j2' %}
 {%     include 'eos/radius-server.j2' %}
 ```
 {% endif %}
