--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/vlan-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/vlan-interfaces.j2
@@ -50,7 +50,7 @@
 {%         set row_ip_addr = vlan_interface.ip_address | arista.avd.default('-') %}
 {%         set row_ip_vaddr = vlan_interface.ip_address_virtual | arista.avd.default('-') %}
 {%         set row_varp = vlan_interface.ip_virtual_router_addresses | arista.avd.default('-') | join(", ") %}
-{%         set row_vrrp = vlan_interface.vrrp.ipv4 | arista.avd.default('-') %}
+{%         set row_vrrp = vlan_interface.vrrp_ids.ipv4.address | arista.avd.default('-') %}
 {%         set row_acl_in = vlan_interface.access_group_in | arista.avd.default('-') %}
 {%         set row_acl_out = vlan_interface.access_group_out | arista.avd.default('-') %}
 | {{ vlan_interface.name }} |  {{ row_vrf }}  |  {{ row_ip_addr }}  |  {{ row_ip_vaddr }}  |  {{ row_varp }}  |  {{ row_vrrp }}  |  {{ row_acl_in }}  |  {{ row_acl_out }}  |
@@ -61,7 +61,7 @@
 {# IPv6 #}
 {%     set vlan_interfaces_ipv6 = [] %}
 {%     for vlan_interface in vlan_interfaces | arista.avd.default([]) %}
-{%         if vlan_interface.ipv6_address is arista.avd.defined or vlan_interface.ipv6_address_virtual is arista.avd.defined or vlan_interface.ipv6_address_virtuals is arista.avd.defined %}
+{%         if vlan_interface.ipv6_address is arista.avd.defined or vlan_interface.ipv6_address_virtuals is arista.avd.defined %}
 {%             do vlan_interfaces_ipv6.append(vlan_interface) %}
 {%         endif %}
 {%     endfor %}
@@ -74,23 +74,19 @@
 {%         for vlan_interface in vlan_interfaces_ipv6 | arista.avd.natural_sort('name') %}
 {%             set row_vrf = vlan_interface.vrf | arista.avd.default('default') %}
 {%             set row_ip_addr = vlan_interface.ipv6_address | arista.avd.default('-') %}
-{%             if vlan_interface.ipv6_address_virtual is arista.avd.defined %}
-{%                 set row_ip_vaddr = ([vlan_interface.ipv6_address_virtual] + vlan_interface.ipv6_address_virtuals | arista.avd.default([])) | join(", ") %}
-{%             else %}
-{%                 set row_ip_vaddr = vlan_interface.ipv6_address_virtuals | arista.avd.default('-') | join(", ") %}
+{%             if vlan_interface.ipv6_address_virtuals is arista.avd.defined %}
+{%                 set row_ip_vaddr = vlan_interface.ipv6_address_virtuals | join(", ") %}
 {%             endif %}
 {%             if vlan_interface.ipv6_virtual_router_addresses is arista.avd.defined %}
 {%                 set row_varp = vlan_interface.ipv6_virtual_router_addresses | join(", ") %}
-{%             else %}
-{%                 set row_varp = vlan_interface.ipv6_virtual_router_address | arista.avd.default('-') %}
 {%             endif %}
-{%             set row_vrrp = vlan_interface.vrrp.ipv6 | arista.avd.default('-') %}
+{%             set row_vrrp = vlan_interface.vrrp_ids.ipv6.address | arista.avd.default('-') %}
 {%             set row_nd_ra_disabled = vlan_interface.ipv6_nd_ra_disabled | arista.avd.default('-') %}
 {%             set row_nd_man_cfg = vlan_interface.ipv6_nd_managed_config_flag | arista.avd.default('-') %}
 {%             set row_nd_oth_cfg = vlan_interface.ipv6_nd_other_config_flag | arista.avd.default('-') %}
 {%             set row_acl_in = vlan_interface.ipv6_access_group_in | arista.avd.default('-') %}
 {%             set row_acl_out = vlan_interface.ipv6_access_group_out | arista.avd.default('-') %}
-| {{ vlan_interface.name }} | {{ row_vrf }} | {{ row_ip_addr }} | {{ row_ip_vaddr }} | {{ row_varp }} | {{ row_vrrp }} | {{ row_nd_ra_disabled }} | {{ row_nd_man_cfg }} | {{ row_nd_oth_cfg }} | {{ row_acl_in }} | {{ row_acl_out }} |
+| {{ vlan_interface.name }} | {{ row_vrf }} | {{ row_ip_addr }} | {{ row_ip_vaddr | arista.avd.default('-') }} | {{ row_varp | arista.avd.default('-') }} | {{ row_vrrp }} | {{ row_nd_ra_disabled }} | {{ row_nd_man_cfg }} | {{ row_nd_oth_cfg }} | {{ row_acl_in }} | {{ row_acl_out }} |
 {%         endfor %}
 {%     endif %}
 {# VRRP #}
