--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -94,11 +94,6 @@ router bgp {{ router_bgp.as }}
 {%         endfor %}
 {%     endif %}
 {%     for peer_group in router_bgp.peer_groups | arista.avd.natural_sort('name') %}
-{%         if peer_group.bgp_listen_range_prefix is arista.avd.defined and peer_group.peer_filter is arista.avd.defined %}
-   bgp listen range {{ peer_group.bgp_listen_range_prefix }} peer-group {{ peer_group.name }} peer-filter {{ peer_group.peer_filter }}
-{%         endif %}
-{%     endfor %}
-{%     for peer_group in router_bgp.peer_groups | arista.avd.natural_sort('name') %}
 {%         if peer_group.shutdown is arista.avd.defined(true) %}
    neighbor {{ peer_group.name }} shutdown
 {%         endif %}
@@ -873,8 +868,6 @@ router bgp {{ router_bgp.as }}
 {%                     set nexthop_v6_cli = nexthop_v6_cli ~ " originate" %}
 {%                 endif %}
       {{ nexthop_v6_cli }}
-{%             elif peer_group.next_hop.address_family_ipv6_originate is arista.avd.defined(true) %}
-      neighbor {{ peer_group.name }} next-hop address-family ipv6 originate
 {%             endif %}
 {%             if peer_group.activate is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} activate
@@ -1577,12 +1570,6 @@ router bgp {{ router_bgp.as }}
       neighbor interface {{ neighbor_interface.name }} peer-group {{ neighbor_interface.peer_group }} peer-filter {{ neighbor_interface.peer_filter }}
 {%             endif %}
 {%         endfor %}
-{# TODO: AVD5.0 remove tmp_vrf_neighbor_prefix_list_in and tmp_vrf_neighbor_prefix_list_out #}
-{# Special temporary variables set under vrf neighbors but read under vrf address_family_ipv4 #}
-{# This is required to move the deprecated vrfs[].neighbors[].ip_prefix_list_in/out to #}
-{# vrfs[].address_family_ipv4.neighbors[].ip_prefix_list_in/out #}
-{%         set tmp_vrf_neighbor_prefix_list_in = {} %}
-{%         set tmp_vrf_neighbor_prefix_list_out = {} %}
 {%         for neighbor in vrf.neighbors | arista.avd.natural_sort('ip_address') %}
 {%             if neighbor.remote_as is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} remote-as {{ neighbor.remote_as }}
@@ -1714,16 +1701,6 @@ router bgp {{ router_bgp.as }}
 {%             if neighbor.route_map_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_in }} in
 {%             endif %}
-{#             TODO: AVD5.0 remove tmp_vrf_neighbor_prefix_list_in and tmp_vrf_neighbor_prefix_list_out #}
-{#             Special temporary variables set under vrf neighbors but read under vrf address_family_ipv4 #}
-{#             This is required to move the deprecated vrfs[].neighbors[].ip_prefix_list_in/out to #}
-{#             vrfs[].address_family_ipv4.neighbors[].ip_prefix_list_in/out #}
-{%             if neighbor.prefix_list_in is arista.avd.defined %}
-{%                 do tmp_vrf_neighbor_prefix_list_in.update({neighbor.ip_address: neighbor.prefix_list_in}) %}
-{%             endif %}
-{%             if neighbor.prefix_list_out is arista.avd.defined %}
-{%                 do tmp_vrf_neighbor_prefix_list_out.update({neighbor.ip_address: neighbor.prefix_list_out}) %}
-{%             endif %}
 {%         endfor %}
 {%         for network in vrf.networks | arista.avd.natural_sort('prefix') %}
 {%             if network.route_map is arista.avd.defined %}
@@ -1809,8 +1786,7 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%             endfor %}
 {%         endif %}
-{#         TODO: AVD5.0 remove tmp_vrf_neighbor_prefix_list_in and tmp_vrf_neighbor_prefix_list_out #}
-{%         if vrf.address_family_ipv4 is arista.avd.defined or tmp_vrf_neighbor_prefix_list_in or tmp_vrf_neighbor_prefix_list_out %}
+{%         if vrf.address_family_ipv4 is arista.avd.defined %}
       !
       address-family ipv4
 {%             if vrf.address_family_ipv4.bgp.missing_policy.direction_in_action is arista.avd.defined %}
@@ -1854,22 +1830,11 @@ router bgp {{ router_bgp.as }}
 {%                 if neighbor.rcf_out is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
 {%                 endif %}
-{#                 TODO: AVD5.0 remove tmp_vrf_neighbor_prefix_list_in and tmp_vrf_neighbor_prefix_list_out #}
 {%                 if neighbor.prefix_list_in is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_in }} in
-{%                     if tmp_vrf_neighbor_prefix_list_in[neighbor.ip_address] is arista.avd.defined %}
-{%                         do tmp_vrf_neighbor_prefix_list_in.pop(neighbor.ip_address) %}
-{%                     endif %}
-{%                 elif tmp_vrf_neighbor_prefix_list_in[neighbor.ip_address] is arista.avd.defined %}
-         neighbor {{ neighbor.ip_address }} prefix-list {{ tmp_vrf_neighbor_prefix_list_in.pop(neighbor.ip_address) }} in
 {%                 endif %}
 {%                 if neighbor.prefix_list_out is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_out }} out
-{%                     if tmp_vrf_neighbor_prefix_list_out[neighbor.ip_address] is arista.avd.defined %}
-{%                         do tmp_vrf_neighbor_prefix_list_out.pop(neighbor.ip_address) %}
-{%                     endif %}
-{%                 elif tmp_vrf_neighbor_prefix_list_out[neighbor.ip_address] is arista.avd.defined %}
-         neighbor {{ neighbor.ip_address }} prefix-list {{ tmp_vrf_neighbor_prefix_list_out.pop(neighbor.ip_address) }} out
 {%                 endif %}
 {%                 if neighbor.next_hop.address_family_ipv6.enabled is arista.avd.defined %}
 {%                     if neighbor.next_hop.address_family_ipv6.enabled is arista.avd.defined(true) %}
@@ -1882,13 +1847,6 @@ router bgp {{ router_bgp.as }}
 {%                     endif %}
          {{ ipv6_originate_cli }}
 {%                 endif %}
-{%             endfor %}
-{#             TODO: AVD5.0 remove tmp_vrf_neighbor_prefix_list_in and tmp_vrf_neighbor_prefix_list_out #}
-{%             for tmp_neighbor_ip in tmp_vrf_neighbor_prefix_list_in | arista.avd.natural_sort %}
-         neighbor {{ tmp_neighbor_ip }} prefix-list {{ tmp_vrf_neighbor_prefix_list_in[tmp_neighbor_ip] }} in
-{%             endfor %}
-{%             for tmp_neighbor_ip in tmp_vrf_neighbor_prefix_list_out | arista.avd.natural_sort %}
-         neighbor {{ tmp_neighbor_ip }} prefix-list {{ tmp_vrf_neighbor_prefix_list_out[tmp_neighbor_ip] }} out
 {%             endfor %}
 {%             for network in vrf.address_family_ipv4.networks | arista.avd.natural_sort('prefix') %}
 {%                 set network_cli = "network " ~ network.prefix %}
@@ -2117,49 +2075,6 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%             endfor %}
 {%         endif %}
-{%         for  address_family in vrf.address_families | arista.avd.natural_sort('address_family') %}
-      !
-      address-family {{ address_family.address_family }}
-{%             if address_family.bgp is arista.avd.defined %}
-{%                 if address_family.bgp.missing_policy.direction_in_action is arista.avd.defined %}
-         bgp missing-policy direction in action {{ address_family.bgp.missing_policy.direction_in_action }}
-{%                 endif %}
-{%                 if address_family.bgp.missing_policy.direction_out_action is arista.avd.defined %}
-         bgp missing-policy direction out action {{ address_family.bgp.missing_policy.direction_out_action }}
-{%                 endif %}
-{%                 for additional_path in address_family.bgp.additional_paths | arista.avd.natural_sort %}
-         bgp additional-paths {{ additional_path }}
-{%                 endfor %}
-{%             endif %}
-{%             for peer_group in address_family.peer_groups | arista.avd.natural_sort('name') %}
-{%                 if peer_group.activate is arista.avd.defined(true) %}
-         neighbor {{ peer_group.name }} activate
-{%                 elif peer_group.activate is arista.avd.defined(false) %}
-         no neighbor {{ peer_group.name }} activate
-{%                 endif %}
-{%                 if peer_group.next_hop.address_family_ipv6_originate is arista.avd.defined(true) %}
-         neighbor {{ peer_group.name }} next-hop address-family ipv6 originate
-{%                 endif %}
-{%             endfor %}
-{%             for neighbor in address_family.neighbors | arista.avd.natural_sort('ip_address') %}
-{%                 if neighbor.activate is arista.avd.defined(true) %}
-         neighbor {{ neighbor.ip_address }} activate
-{%                 endif %}
-{%                 if neighbor.route_map_in is arista.avd.defined %}
-         neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_in }} in
-{%                 endif %}
-{%                 if neighbor.route_map_out is arista.avd.defined %}
-         neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
-{%                 endif %}
-{%             endfor %}
-{%             for network in address_family.networks | arista.avd.natural_sort('prefix') %}
-{%                 set network_cli = "network " ~ network.prefix %}
-{%                 if network.route_map is arista.avd.defined %}
-{%                     set network_cli = network_cli ~ " route-map " ~ network.route_map %}
-{%                 endif %}
-         {{ network_cli }}
-{%             endfor %}
-{%         endfor %}
 {%         if vrf.eos_cli is arista.avd.defined %}
       !
       {{ vrf.eos_cli | indent(6, false) }}
